android compile 修改为 implementation

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -45,6 +45,6 @@ repositories {
 }
 
 dependencies {
-    compile 'com.facebook.react:react-native:+'
-    compile 'com.google.zxing:core:3.3.2'
+    implementation 'com.facebook.react:react-native:+'
+    implementation 'com.google.zxing:core:3.3.2'
 }
